--- a/foldera/templates/base.html
+++ b/foldera/templates/base.html
@@ -23,9 +23,9 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 			<li class="{{home_active}}"><a href="/">home</a></li>
-			<li class="{{write_active}}"><a href="write">Write</a></li>
-			<li class="{{browse_active}}"><a href="browse">Browse</a></li>
-			<li class="{{search_active}}"><a href="search">Search</a><li>	
+			<li class="{{write_active}}"><a href="/write">Write</a></li>
+			<li class="{{browse_active}}"><a href="/browse">Browse</a></li>
+			<li class="{{search_active}}"><a href="/search">Search</a><li>	
 			</ul>
 		</div>
 	</div>
